Refactor to new backend; Make Front-end working with it; Bunch of bugfixes and improvements; Upgrade primeng to v18
