# openapi/checklistix-data.yaml
@@ -194,7 +194,28 @@ paths:
           description: Bad request
         '500':
           description: Internal server error
-  /checklist-items/bulk:
+    delete:
+      tags:
+        - Checklists
+      summary: Deletes a checklist item
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Ok
+        '204':
+          description: No content
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
+  /checklist-items/positions:
     patch:
       tags:
         - Checklists
@@ -207,10 +228,7 @@ paths:
             schema:
               type: array
               items:
-                anyOf:
-                  - $ref: '#/components/schemas/SubChecklistForm'
-                  - $ref: '#/components/schemas/SectionTitleForm'
-                  - $ref: '#/components/schemas/TextBoxForm'
+                $ref: '#/components/schemas/PositionUpdate'
       responses:
         '204':
           description: Ok
@@ -279,7 +297,7 @@ paths:
           description: Bad request
         '500':
           description: Internal server error
-  /sub-checklist-items/bulk:
+  /sub-checklist-items/positions:
     patch:
       tags:
         - Checklists
@@ -292,11 +310,7 @@ paths:
             schema:
               type: array
               items:
-                anyOf:
-                  - $ref: '#/components/schemas/SubChecklistItemCheckItemForm'
-                  - $ref: '#/components/schemas/SubChecklistItemSubtitleForm'
-                  - $ref: '#/components/schemas/SubChecklistItemPreconditionForm'
-                  - $ref: '#/components/schemas/SubChecklistItemPostconditionForm'
+                $ref: '#/components/schemas/PositionUpdate'
       responses:
         '204':
           description: Ok
@@ -757,3 +771,16 @@ components:
         - Subtitle
         - LeftText
         - RightText
+
+    PositionUpdate:
+      type: object
+      required:
+        - id
+        - position
+      properties:
+        id:
+          type: string
+          format: uuid
+          nullable: false
+        position:
+          type: integer
